feat: use github.token by default
Simplifies usage and bring it closer to actions/checkout and
actions/github-script. See:

https://github.com/actions/checkout/blob/main/action.yml#L24
https://github.com/actions/github-script/blob/main/action.yml#L13

Closes: #107

--- a/action.yml
+++ b/action.yml
@@ -3,7 +3,8 @@ description: 'find changed files/folders on push/pr event'
 author: 'Stockopedia'
 inputs:
   github-token:
-    required: true
+    default: ${{ github.token }}
+    required: false
     description: 'github token'
   format:
     required: false
