docs: fix format's description to include the actual string for newline
otherwise people must check the source code to find out it's 'newline'
to get line breaks

--- a/action.yml
+++ b/action.yml
@@ -8,7 +8,7 @@ inputs:
     description: 'github token'
   format:
     required: false
-    description: 'output format - either json, csv or separated by line-breaks'
+    description: 'output format - either json, csv or newline'
     default: json
   foldersOnly:
     required: false
