--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "private": true,
   "description": "GitHub action to get the changes folders/files between the latest commit, and the previous latest commit",
   "main": "lib/main.js",
+  "engines": {
+    "node": "v16"
+  },
   "scripts": {
     "build": "tsc",
     "format": "prettier --write **/*.ts",
@@ -25,24 +28,24 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "@actions/core": "^1.2.6",
+    "@actions/core": "^1.6.0",
     "@actions/github": "^5.0.0",
-    "minimatch": "^3.0.4"
+    "minimatch": "^5.0.1"
   },
   "devDependencies": {
-    "@types/minimatch": "^3.0.3",
-    "@types/jest": "^27.0.1",
-    "@types/node": "^14.14.35",
-    "@typescript-eslint/parser": "^4.29.3",
-    "@vercel/ncc": "^0.29.0",
-    "eslint": "^7.32.0",
-    "eslint-plugin-github": "^4.1.5",
-    "eslint-plugin-jest": "^24.4.0",
-    "jest": "^26.6.3",
-    "jest-circus": "^27.2.0",
+    "@types/minimatch": "^3.0.5",
+    "@types/jest": "^27.4.1",
+    "@types/node": "^16",
+    "@typescript-eslint/parser": "^5.17.0",
+    "@vercel/ncc": "^0.33.3",
+    "eslint": "^8.12.0",
+    "eslint-plugin-github": "^4.3.6",
+    "eslint-plugin-jest": "^26.1.3",
+    "jest": "^27.5.1",
+    "jest-circus": "^27.5.1",
     "js-yaml": "^4.1.0",
-    "prettier": "2.3.2",
-    "ts-jest": "^26.5.6",
-    "typescript": "^4.3.5"
+    "prettier": "2.6.1",
+    "ts-jest": "^27.1.4",
+    "typescript": "^4.6.3"
   }
 }
