--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -9,7 +9,9 @@
     },
     "rules": {
       "eslint-comments/no-use": "off",
+      "filenames/match-regex": ["error", "^[a-z0-9-]+(.d|.config|.spec)?$"],
       "import/no-namespace": "off",
+      "i18n-text/no-en": "off",
       "no-unused-vars": "off",
       "@typescript-eslint/no-unused-vars": "error",
       "@typescript-eslint/explicit-member-accessibility": ["error", {"accessibility": "no-public"}],
