--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -6,20 +6,17 @@ jobs:
   test:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-      - run: |
-          npm install
-      - run: |
-          npm run all
-      - run: |
-          npm run test
+      - uses: actions/checkout@v3
+      - run: npm ci
+      - run: npm run all
+      - run: npm run test
   run-self:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
       - uses: ./
         id: get_changed
         with:
-          github-token: ${{ secrets.GITHUB_TOKEN }}
+          github-token: ${{ github.token }}
       - name: Echo
         run: echo ${{ steps.get_changed.outputs.changed }}
