--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -9,9 +9,7 @@ jobs:
       - run: npm ci
         name: Install
       - run: npm run all
-        name: Compile Typescript and package
-      - run: npm run test
-        name: Unit tests
+        name: Compile Typescript, run tests and package
   run-self:
     runs-on: ubuntu-latest
     steps:
